@@ -456,3 +456,4 @@ qpdf found shared xobject in leaf 0
 QPDF copy foreign with data 1
 QPDF copy foreign with foreign_stream 1
 QPDFObjectHandle need_newline 1
+qpdf pages range omitted with . 0
